landing-page-yaml/landing-page.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  labels:
    app: landing-page
spec:
  selector:
    matchLabels:
      app: landing-page
  replicas: 1
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
        - name: landing-page
          image: muhammadrafli24/landing-page:${BUILD_NUMBER}
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page
spec:
  selector:
    app: landing-page
  type: LoadBalancer
  ports:
    - name: landing-page
      protocol: TCP
      port: 80
      targetPort: 8080
