landing-page-yaml/ingress_landing-page.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rafli24.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rafli-landing
                port:
                  number: 80
